--- a/src/screens/NavBar/NavBar.module.css
+++ b/src/screens/NavBar/NavBar.module.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     padding-top: 1vh;
-    font-size: x-large;
+    font-size: 3vh;
 }
 
 .content {
