--- a/src/screens/NavBar/VerticalNavBar.module.css
+++ b/src/screens/NavBar/VerticalNavBar.module.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: row;
     padding-top: 1vh;
-    font-size: x-large;
+    font-size: 3vh;
 }
 
 .dropDownButton {
